src/test/deca/syntax/invalid/created/objet/cast.deca
// Description :
//      test de verification du cast de classe 
// Resultats :
//      ok

class A {
     int x;

}

class B extends A {
    
}

{

    A a = new B();
    B b = new B();
    b = (B) a;
    
}